--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
+  
   "name": "react-calculator",
-  "homepage": "https://dadhimukh.github.io/React_Calculator",
+  "homepage": "https://k1rancoder.github.io/React_Calculator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
