--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   
   "name": "react-calculator",
   
-  "homepage": "https://k1rancoder.github.io/React_Calculator-Coding-Ninjas-",
+  "homepage": "https://k1rancoder.github.io/Calculator",
   
   "version": "0.1.0",
   
